--- a/src/layouts/mobile.scss
+++ b/src/layouts/mobile.scss
@@ -183,7 +183,7 @@ body:not(.mobile-stable).is-phone {
   .mobile-tab-switcher-menu-spacer:first-child {
     z-index: 2;
   }
-  .mobile-tab-switcher-menu-spacer:last-child .clickable-icon::before {
+  .mobile-tab-switcher-menu-spacer:last-child .clickable-icon::after {
     position: fixed;
     z-index: 1;
     inset: 0;
